--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 </head>
 <body>
   <div id='app'></div>
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-light_green.min.css" />
+  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+
   <script src="/dist/bundle.js"></script>
 </body>
 </html>
